WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25117
Mac Chromium form controls broken
https://bugs.webkit.org/show_bug.cgi?id=25117
Summary
Mac Chromium form controls broken
John Grabowski
Reported
2009-04-09 11:04:33 PDT
In Mac Chromium, native form controls (e.g. checkboxes) are broken when run in multiprocess mode (not in Test_Shell). Drawn in the wrong place, causes crashes, etc. Patch coming.
Attachments
fix form controls for Chromium Mac
(3.62 KB, patch)
2009-04-09 11:06 PDT
,
John Grabowski
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Grabowski
Comment 1
2009-04-09 11:06:02 PDT
Created
attachment 29368
[details]
fix form controls for Chromium Mac
David Levin
Comment 2
2009-04-09 13:14:00 PDT
Working on landing.
David Levin
Comment 3
2009-04-09 13:47:59 PDT
Committed <
http://trac.webkit.org/changeset/42368
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug